feat: 필요한 설정 및 불필요한 파일을 삭제한다

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
